"""Herb similarity calculation service.

This service implements molecular similarity calculations for
herbal compounds using chemical fingerprinting techniques.
"""

import asyncio
from typing import Any, Dict, List

import structlog

from helixcore.algorithms.base import BaseAlgorithmService
from helixcore.interfaces.proto import task_pb2

logger = structlog.get_logger()


class HerbSimilarityService(BaseAlgorithmService):
    """Service for calculating molecular similarity of herbal compounds.
    
    This service uses molecular fingerprinting to compare chemical
    structures and identify similar compounds in herbal medicine
    databases.
    """
    
    def __init__(self) -> None:
        """Initialize the herb similarity service."""
        super().__init__(
            name="herb_similarity",
            version="0.1.3",
            manifest_path="algorithms/herb_similarity/manifest.yaml",
        )
        self._initialize_chemistry_tools()
    
    def _initialize_chemistry_tools(self) -> None:
        """Initialize chemistry libraries and databases."""
        # In production, this would load RDKit, databases, etc.
        logger.info("chemistry_tools_initialized")
        self.compound_database = self._load_herb_database()
    
    def _load_herb_database(self) -> List[Dict[str, Any]]:
        """Load the herbal compound database.
        
        Returns
        -------
        List[Dict[str, Any]]
            List of compound entries with SMILES and metadata.
        """
        # Mock database for demonstration
        return [
            {
                "smiles": "CC(C)C1=CC=C(C=C1)C(C)C(O)=O",
                "name": "Ibuprofen analog",
                "source": "Willow bark",
            },
            {
                "smiles": "CN1C=NC2=C1C(=O)N(C(=O)N2C)C",
                "name": "Caffeine",
                "source": "Green tea",
            },
            {
                "smiles": "COC1=C(C=CC(=C1)CCC(=O)C2=C(C=C(C=C2)O)OC)O",
                "name": "Curcumin",
                "source": "Turmeric",
            },
        ]
    
    async def predict(self, task_spec: task_pb2.TaskSpec) -> Dict[str, Any]:
        """Calculate molecular similarity for the given compound.
        
        Parameters
        ----------
        task_spec : task_pb2.TaskSpec
            Task specification containing:
            - smiles: Query molecule SMILES notation
            - database: Optional custom database
            - threshold: Similarity threshold
            
        Returns
        -------
        Dict[str, Any]
            Similarity results including score and matches.
        """
        # Extract inputs
        input_data = dict(task_spec.input_payload)
        query_smiles = input_data.get("smiles", "")
        custom_database = input_data.get("database", None)
        threshold = float(input_data.get("threshold", 0.7))
        
        logger.info(
            "processing_similarity_request",
            task_id=task_spec.task_id,
            query_smiles=query_smiles,
            threshold=threshold,
        )
        
        # Use custom database if provided, otherwise use default
        database = custom_database or self.compound_database
        
        # Calculate similarities (mock implementation)
        similarities = await self._calculate_similarities(
            query_smiles,
            database,
            threshold,
        )
        
        # Find best match
        best_score = max(similarities, key=lambda x: x["score"])["score"] if similarities else 0.0
        
        result = {
            "score": best_score,
            "matches": similarities,
            "query_smiles": query_smiles,
            "compounds_screened": len(database),
            "threshold_used": threshold,
        }
        
        logger.info(
            "similarity_calculation_completed",
            task_id=task_spec.task_id,
            best_score=best_score,
            matches_found=len(similarities),
        )
        
        return result
    
    async def _calculate_similarities(
        self,
        query_smiles: str,
        database: List[Dict[str, Any]],
        threshold: float,
    ) -> List[Dict[str, Any]]:
        """Calculate Tanimoto similarities using fingerprints.
        
        Parameters
        ----------
        query_smiles : str
            Query molecule SMILES.
        database : List[Dict[str, Any]]
            Database of compounds to compare.
        threshold : float
            Minimum similarity threshold.
            
        Returns
        -------
        List[Dict[str, Any]]
            List of similar compounds above threshold.
        """
        # Mock similarity calculation
        # In production, this would use RDKit fingerprints
        await asyncio.sleep(0.1)  # Simulate computation
        
        matches = []
        for compound in database:
            # Mock Tanimoto coefficient calculation
            mock_score = 0.85 if "C(=O)" in compound["smiles"] else 0.65
            
            if mock_score >= threshold:
                matches.append({
                    "smiles": compound["smiles"],
                    "score": mock_score,
                    "name": compound.get("name", "Unknown"),
                    "source": compound.get("source", "Unknown"),
                })
        
        # Sort by score descending
        matches.sort(key=lambda x: x["score"], reverse=True)
        
        return matches


def main() -> None:
    """Main entry point for the service."""
    service = HerbSimilarityService()
    service.serve(port=50051)


if __name__ == "__main__":
    main()